--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 flask-Cors
 Flask==2.1.0
 gunicorn==20.1.0
-opencv-python==4.6.0.66
+google-cloud-storage==1.13.2
+google-cloud-videointelligence==1.6.1
 gspread==3.6.0
-google-auth==1.14.3
